Resolved loading up of public and private keys